istio/mtls/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: yas-services-mtls-dev
  namespace: dev
spec:
  host: "*.dev.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: yas-services-mtls-staging
  namespace: staging
spec:
  host: "*.staging.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: yas-services-mtls-sandbox
  namespace: developer-sandbox
spec:
  host: "*.developer-sandbox.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
